<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="163dp"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/texto_digite_email_layout"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/texto_digite_senha_layout"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botao_logar_layout" />

    <TextView
        android:id="@+id/txtCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Cadastrar"
        android:text="@string/texto_Cadastre_layout"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary" />
    </LinearLayout>