<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="163dp"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/edtCadastroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/texto_digite_nome_layout"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/edtCadastroEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:maxLines="1"
        android:textAlignment="center"
        android:hint="@string/texto_digite_email_layout"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edtCadastroSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:maxLines="1"
        android:textAlignment="center"
        android:hint="@string/texto_digite_senha_layout"
        android:inputType="textPassword"
        android:textColor="@color/textColorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/cadastro_pais"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_weight="0.5"
            android:entries="@array/casatro_pais" />

        <EditText
            android:id="@+id/edtCadastroTelefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:maxLength="11"
            android:hint="@string/texto_digite_telefone_layout"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/textColorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botao_cadastrar_layout" />
</LinearLayout>